--- a/bio.html
+++ b/bio.html
@@ -66,7 +66,7 @@
             大学ではハードとソフトの両面に取り組み、3Dプリンタやロボット製作に精を出している。<br>
             推し活（みこめっと）で日々の元気もチャージ中！
         </p>
-        <a class="button-link" href="DS Web.html">← 自己紹介に戻る</a>
+        <a class="button-link" href="index.html">← 自己紹介に戻る</a>
     </div>
 </body>
 </html>
